# pxl8

./: .ccls  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  compile_flags.txt  index.html
crates/pxl8-cli/: Cargo.toml
crates/pxl8-cpu/: Cargo.toml
crates/pxl8-cpu/src/: cpu.rs  lib.rs
crates/pxl8-gfx/: Cargo.toml
crates/pxl8-gpu/: Cargo.toml
crates/pxl8-io/: Cargo.toml
crates/pxl8-mem/: Cargo.toml
crates/pxl8-panic/: Cargo.toml  build.rs
crates/pxl8-panic/src/: lib.rs
crates/pxl8-sfx/: Cargo.toml
crates/pxl8-sfx/src/: lib.rs
crates/pxl8-system/: Cargo.toml  build.rs
crates/pxl8-system/res/sprites/: player.aseprite  pxl8.ase  trees.aseprite
crates/pxl8-system/src/: event.rs  lib.rs  log.rs  main.rs  pixels.rs  res.rs  sprite.rs  stbi.rs  ui.rs
crates/pxl8-system/src/res/: palettes.rs  sprites.rs
crates/pxl8-system/src/stbi/: stb_image.c  stb_image.rs
crates/pxl8-system/src/ui/: microui.rs
lib/: SDL3.lib
src/: alloc.rs  editor.rs  error.rs  event.rs  ffi.rs  gfx.rs  gpu.rs  lib.rs  macros.rs  main.rs  math.rs  pxl8.json  sprite.rs  window.rs
src/ffi/: linux.rs  windows.rs
src/gpu/: texture.rs
