[package]
name = "pxl8"
version = "0.1.0"
edition = "2021"
authors = ["asrael <asrael@pxl8.org>"]
license = "zlib"

[dependencies]
libc = { version = "0.2", default-features = false, features = ["extra_traits"] }
sdl3-sys = { version = "*", default-features = false, features = ["build-from-source"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
