[package]
name = "pxl8"
version = "0.1.0"
edition = "2021"
authors = ["asrael <asrael@pxl8.org>"]
license = "zlib"

[dependencies]
libc = { version = "0.2", default-features = false, features = ["extra_traits"] }
glam = { version = "0.29", default-features = false, features = ["libm"] }
sdl3-sys = { version = "*", default-features = false, features = ["build-from-source"] }

[target.wasm32-unknown-emscripten.dependencies]
sdl3-sys = { version = "*", default-features = false, features = ["build-from-source-static"] }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "s"

# patch for now to resolve windows wasm build issue (emcmake.bat can't be found)
[patch.crates-io]
cmake = { git = "https://github.com/MoAlyousef/cmake-rs", branch = "master" }
