[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["asrael <asrael@pxl8.org>"]
license = "MPL-2.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
